--- a/JewelleryShop/src/main/webapp/WEB-INF/resources/css/style.css
+++ b/JewelleryShop/src/main/webapp/WEB-INF/resources/css/style.css
@@ -1,5 +1,5 @@
 body { 
- background: url("s7.jpg") no-repeat center center fixed; 
+ background: url("d10.jpg") no-repeat center center fixed; 
  -webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
