--- a/JewelleryShop/src/main/webapp/WEB-INF/resources/css/style2.css
+++ b/JewelleryShop/src/main/webapp/WEB-INF/resources/css/style2.css
@@ -1,16 +1,16 @@
 
 
 .navbar-default {
-    background-color: #CC0000;
-    border-color: #AA0000;
+    background-color: #F8F8F8;
+    border-color: #E7E7E7;
    border-radius: 0;
 }
 
-.navbar-default .navbar-brand,
-.navbar-default .navbar-brand:hover,
-.navbar-default .navbar-brand:focus {
-    color: #FFF;
+.navbar-default .navbar-brand {
+    color: #777;
 }
+
+
 
 .navbar-default .navbar-nav > li > a {
     color: #FFF;
