--- a/JewelleryShop/src/main/webapp/WEB-INF/resources/css/style4.css
+++ b/JewelleryShop/src/main/webapp/WEB-INF/resources/css/style4.css
@@ -1,3 +1,7 @@
-.carousel {position: relative;}
 
-.carousel-inner {position: relative; width: 100%; overflow: hidden;}
+
+.full-screen {
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+}
