--- a/JewelleryShop/.settings/org.eclipse.wst.common.component
+++ b/JewelleryShop/.settings/org.eclipse.wst.common.component
@@ -4,7 +4,9 @@
         <wb-resource deploy-path="/" source-path="/src/main/webapp" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/resources"/>
-        <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/test/java"/>
+        <dependent-module archiveName="JewelleryShopBackend-0.0.1-SNAPSHOT.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/JewelleryShopBackend/JewelleryShopBackend">
+            <dependency-type>uses</dependency-type>
+        </dependent-module>
         <property name="context-root" value="JewelleryShop"/>
         <property name="java-output-path" value="/JewelleryShop/target/classes"/>
     </wb-module>
