--- a/JewelleryShop/src/main/webapp/WEB-INF/resources/css/style2.css
+++ b/JewelleryShop/src/main/webapp/WEB-INF/resources/css/style2.css
@@ -1,5 +1,4 @@
 
-
 .navbar-default {
     background-color: #F8F8F8;
     border-color: #E7E7E7;
@@ -10,6 +9,15 @@
     color: #777;
 }
 
+.no-margin
+{
+	margin:0px;
+}
+
+.no-padding
+{
+	padding:0px;
+}
 
 
 .navbar-default .navbar-nav > li > a {
