updated login validation

--- a/JewelleryShop/src/main/webapp/WEB-INF/resources/css/style4.css
+++ b/JewelleryShop/src/main/webapp/WEB-INF/resources/css/style4.css
@@ -4,14 +4,15 @@
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
+  -webkit-background-size: cover;
+ -moz-background-size: cover;
+ -o-background-size: cover;
 }
 
-.no-margin
-{
-	margin:0px;
+.panel-default {
+ opacity: 0.9;
+ margin-top:30px;
 }
-
-.no-padding
-{
-	padding:0px;
+.form-group.last {
+ margin-bottom:0px;
 }
